--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
-
 body {
-	padding-top: 0px; 
+	margin-top: 0;
+	padding-top: 0; 
 	font-family: 'trebuchet ms', helvetica, sans-serif;
 }
 
@@ -344,8 +344,8 @@ pre {
 	text-align:left;
 	overflow-x: auto;
 	overflow-y:visible;
-     width: 580px; 
-     height: auto;
+    width: 100%; 
+    height: auto;
 }
 .non {
 	padding-right: 0px;
