init minimal style

--- a/style/style.css
+++ b/style/style.css
@@ -1,494 +1,10 @@
+* {
+	margin: 0;
+	padding: 0; 
+	font-family: 'Segoe UI', 'trebuchet ms', helvetica, sans-serif;
+}
+
 body {
-	margin-top: 0;
-	padding-top: 0; 
-	font-family: 'trebuchet ms', helvetica, sans-serif;
-}
-
-.mycode {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 5px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font: 8pt verdana;
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-	
-}
-.mycode1 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font:8pt arial, helvetica, sans-serif;
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-	
-}
-.mycode2 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font-size:11px;
-	font-family: courier new, sans-serif;
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-	
-}
-
-.mycode3 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font-size:8pt;
-	font-family: verdana;
-     
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-	
-}
-.mytext {
-	
-	font: 8pt verdana;
-	color: #3366ff; 
-	font-style: italic;
-	text-align: left
-}
-.mainblock {
-	border-right: #c0c0c0 1px solid; border-top: medium none; margin-left: 19px; border-left: #c0c0c0 1px solid; border-bottom: medium none; height: 500px
-}
-.conthdr {
-	padding-left: 18px
-}
-.nblock {
-	padding-bottom: 7px; margin-left: 40px; width: 600px; padding-top: 10px
-}
-.ntitle {
-	padding-left: 2px; font-weight: bold; font-size: 8pt; color: #707070; padding-top: 6px; font-family: tahoma
-}
-.news {
-	padding-right: 15px; 
-      padding-left: 15px; 
-      font-size: 8pt; 
-      padding-bottom: 15px; 
-      text-indent: 10px; 
-      font-family: verdana
-}
-.mytab
-{
- border-right: medium none; border-top: medium none; border-left: medium none; border-bottom: #c0c0c0 1px solid
-}
-p {
-	text-align:justify;
-}
-.codes
-{	
-    font: 8pt verdana;
-	text-align: left;
-	font-weight: bold;
-}	
-.kays{	
-    font: 9pt verdana;
-	text-align: justify;
-	font-weight: bold;
-} 
-.text{	
-    font: 9pt verdana;
-	text-align: justify;
-	
-} 
-.kays1{	
-    font: 9pt verdana;
-	text-align: justify;
-	font-weight: bold;
-	color: #cc0000;
-}
-.kays2{	
-    font: 8pt verdana;
-	text-align: center;
-	font-weight: bold;
-	color: maroon;
-}
-.kays3{	
-    font: 7pt verdana;
-	text-align: center;
-	font-weight: bold;
-	color: #3300cc;
-}
-.kays4{	
-    font: 7pt verdana;
-	text-align: center;
-	font-weight: bold;
-} 
-.kays5{	
-    font: 9pt verdana;
-	text-align: center;
-	font-weight: bold;
-} 
-.text1{	
-    font: 9pt verdana;
-	text-align: center;
-	
-} 
-.text2{	
-    font: 9pt verdana;
-	text-align: justify;
-	color: maroon;
-} 
-.text3{	
-    font: 9pt verdana;
-	text-align: justify;
-	color: red;
-}
-.text4{	
-    font: 9pt verdana;
-	text-align: justify;
-	color: navy;
-}  
-.text5{	
-    font: 9pt verdana;
-	text-align: center;
-	color: maroon;
-} 
-
-.text7{	
-    font: 8pt verdana;
-	text-align: justify;
-	font-weight: bold;
-}	
-.text8{	
-    font: 8pt verdana;
-	text-align: justify;
-}	 
-.news a:link {
-	color: #004891
-}
-.news a:visited {
-	color: #004891
-}
-.news a:hover {
-	color: #ff3333
-}
-.var{	
-    font: 8pt verdana;
-	text-align: justify;
-	color: navy;
-}  	
-.var1{	
-    font: 8pt verdana;
-	text-align: justify;
-	color: maroon;
-} 
-.var2{	
-    font: 8pt verdana;
-	text-align: justify;
-	color: green;
-} 
-.var3 {	
-    font: 8pt verdana;
-	text-align: justify;
-	color: blue;
-} 
-.var4 {	
-    font: 8pt verdana;
-	text-align: justify;
-	color: teal;
-} 
-.neocod {
-	border-right: #254069 1px dotted;
-	padding-right: 5px; 
-	border-top: #254069 1px dotted; 
-	padding-left: 10px; 
-	padding-bottom: 5px; 
-	border-left: #254069 3px solid; 
-	color: #254069; 
-	padding-top: 5px; 
-	border-bottom: #254069 1px dotted; 
-	background-color: #ffffe1;
-	font: 8pt verdana;
-}
-.stro {color: #ff0800}
-.string {color: #a50fbc}
-.model {color: #59003b}
-.main1 {
-	font-weight: bold; font-size: 11px; color: white; font-family: tahoma, sans-serif
-}
-.top {
-	font-size: 12px; cursor: hand; color: white; font-family: verdana, sans-serif; text-decoration: none
-}
-.ans {
-	font-size: 11px; font-family: verdana, sans-serif; text-decoration: none
-}
-.link {
-	font-size: 11px; font-family: verdana, sans-serif
-}
-.div {
-	padding-right: 5px; padding-left: 5px; font-weight: bold; padding-bottom: 5px; margin: 1px 0px 0px; width: 934px; cursor: hand; color: white; padding-top: 5px; background-color: #053f7b
-}
-.col {
-	font-weight: normal; font-size: 10px; cursor: hand; color: black; font-family: arial, sans-serif
-}
-.code {
-	font-size: 11px; color: black; font-family: courier new, sans-serif; background-color: #fbfcee
-}
-.legal {
-	font-weight: normal; font-size: 10px; color: #909090; font-family: verdana, sans-serif; text-align: right
-}
-.gomer {
-	font: bold 17pt sylfaen; text-align: right
-}
-
-.gtext {
-	font-size:11px;
-	font-family: courier new, sans-serif;
-	text-indent:0pt;
-	font-weight: bold
-}
-
-.prim {
-	font: 8pt sylfaen; color: #909090
-}
-.marg {
-	font: bold 10pt sylfaen; text-align: center
-}
-.news_p {
-	color: #009966
-}
-.news_o {
-	color: #0033ff
-}
-
-.general1-class { color: #808000; font-weight: bold; }
-.general1-command { color: #008080; font-weight: bold; }
-.general1-comment { color: #000080; font-style: italic; }
-.general1-directive { color: #008000; }
-.general1-label { color: #008000; font-weight: bold; }
-.general1-model { color: #800000; font-weight: bold; }
-.general1-number { color: #800000; }
-.general1-reservedword { font-weight: bold; }
-.general1-space { }
-.general1-string { color: #ff0000; }
-.general1-symbol { color: #000000; }
-.general1-variable { color: #0000ff;}
-
-.news1 {
-	padding-right: 10px; 
-      padding-left: 10px; 
-      font-size: 8pt; 
-      padding-bottom: 17px; 
-      text-indent: 10px; 
-      font-family: verdana
-}
-
-.news1 a:link {
-	color: #004891
-}
-.news1 a:visited {
-	color: #004891
-}
-.news1 a:hover {
-	color: #ff3333
-}
-
-.kbd {
-	color: #333333;
-	background-color: #efefef;
-	font-weight: bold;
-	font-family:verdana;
-	font-size: 90%;
-	text-align: center;
-	border-top: 1px solid #cfcfcf;
-	border-left: 2px solid #bababa;
-	border-right: 2px solid #aaaaaa;
-	border-bottom: 3px solid #909090;
-	padding: 0 2px; 
-	line-height: 1.6em;
-	vertical-align: center;
-	white-space: nowrap;
-	cursor:hand;
-}
-
-pre {
-	padding-right: 0px;
-	padding-left: 0px;
-	padding-bottom: 25px;
-	margin: 0px 0.5em 0px 0px; 
-	font-size:12px;
-	font-family: courier new;
-	text-indent:0pt;
-	text-align:left;
-	overflow-x: auto;
-	overflow-y:visible;
-    width: 100%; 
-    height: auto;
-}
-.non {
-	padding-right: 0px;
-	padding-left: 0px;
-	padding-bottom: 0px;
-	margin: 0px 0.5em 0px 0px; 
-	font-size:12px;
-	font-family: courier new;
-	text-indent:0pt;
-	text-align:left;
-	height: auto;
-}
-.nons {
-	padding-right: 0px;
-	padding-left: 0px;
-	padding-bottom: 0px;
-	margin: 0px 0.5em 0px 0px; 
-	font-size:12px;
-	font-family: courier new;
-	text-indent:0pt;
-	text-align:left;
-	overflow-x: auto;
-	overflow-y:auto;
-	width: auto;
-	height: auto;
-}
-.mycode5 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font-size:12px;
-	font-family: courier new;
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-}
-.hex {
-	background-color: #fff4c9; 
-	font-family: verdana;
-	font-size:12px;
-	font-weight: bold;
-	text-align: center;
-	color:#990000;
-}
-.decimal {
-	font-family: verdana;
-	font-size:12px;
-	text-align: center;
-	font-weight: bold;
-	background-color: #d1ffe7; 
-	
-}
-.character {
-	background-color: #000066; 
-	font-family: verdana;
-	font-size:12px;
-	font-weight: bold;
-	color:#ffff00;
-	text-align: center;
-}
-.character1 {
-	background-color: #000066; 
-	font-family: verdana;
-	font-size:12px;
-	font-weight: bold;
-	color:#ffff00;
-	text-align: left;
-}
-.character2 {
-	font-family: verdana;
-	font-size:12px;
-	font-weight: bold;
-	color:#000099;
-	text-align: left;
-}
-table.line {
-	border-collapse: collapse;
-	cursor:pointer
-} 
-
-.mycode4 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-}
-.short {
-	padding-right: 0px;
-	padding-left: 0px;
-	padding-bottom: 25px;
-	margin: 0px 0.5em 0px 0px; 
-	font-size:12px;
-	font-family: courier new, sans-serif;
-	text-indent:0pt;
-	text-align:left;
-	overflow-x: auto;
-	overflow-y: visible;
-     width: 540px; 
-     height: auto;
-}
-.shorty {
-	padding-right: 0px;
-	padding-left: 0px;
-	padding-bottom: 5px;
-	margin: 0px 0.5em 0px 0px; 
-	font-size:12px;
-	font-family: courier new, sans-serif;
-	text-indent:0pt;
-	text-align:left;
-	width: 540px;
-	height: auto;
-}
-.imgcursor{
- background-color: #eeeeee;
-}
-.divcode5 {
-	border-right: rgb(190,190,190) 1px dotted;
-	padding-right: 1px; 
-	border-top: rgb(190,190,190) 1px dotted; 
-	padding-left: 5px;
-	padding-bottom: 5px;
-	font-size:12px;
-	font-family: courier new;
-	text-indent:0pt;
-	border-left: rgb(190,190,190) 1px dotted;
-	color: #000000; 
-	padding-top: 5px;
-	border-bottom: rgb(190,190,190) 1px dotted; 
-	background-color: lightyellow; 
-	text-align: left;
-	overflow-x: auto;
-     width: 545px; 
-     height: auto;
+	background: #263238;
+	color: #FFF;
 }
