--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,98 @@
 * {
 	margin: 0;
-	padding: 0; 
-	font-family: 'Segoe UI', 'trebuchet ms', helvetica, sans-serif;
+	padding: 0;
 }
+
+*, :after, :before {
+    box-sizing: inherit;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+}
+
+a {
+	color: #00a2e8;
+	text-decoration: none;
+	font-weight: 500;
+}
+
+body main {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, .75rem);
+    padding-left: var(--bs-gutter-x, .75rem);
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media (min-width:576px) {
+    body main { max-width: 540px }
+}
+@media (min-width:768px) {
+    body main { max-width: 720px }
+}
+@media (min-width:992px) {
+    body main { max-width: 960px }
+}
+@media (min-width:1200px) {
+    body main { max-width: 1140px }
+}
+@media (min-width:1400px) {
+    body main { max-width: 1320px }
+}
+
+* < body main {
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5);
+    width: 100%;
+}
+
+table {
+    width: 100%;
+    margin: .5rem 0;
+}
+
+h1 {
+	padding: 0.33rem 0 1rem;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+}
+h2, h3, h4, h5, h6 {
+	padding: 1rem 0;
+    border-top: #d3dce4 1px solid;
+}
+hr {
+    border: none;
+    border-top: solid #d3dce4 1px;
+}
+p {
+	padding: 8px 0;
+}
+
+code {
+    background-color: #dbdbdb;
+    padding: 1px 3px;
+    border-radius: 3px;
+}
+
+blockquote {
+    margin-left: 2rem;
+}
+
+.markdown {
+	color: #3b454e;
+    padding-bottom: 1rem;
+}
+
+.light { font-weight: 300 }
+.center { text-align: center }
